[package]
name = "cgnat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
nix = { version = "0.29", features = ["net", "time"] }
cgnat-common = { path = "../cgnat-common", features = ["user"] }

[[bin]]
name = "cgnat"
path = "src/main.rs"
